# odin-react

./: .env  .gitignore  README.md  eslint.config.js  index.html  jest.config.js  package-lock.json  package.json  tsconfig-build.json  tsconfig.json  vite.config.ts
.OLD_CODE/public/: index.html
.OLD_CODE/src/: App.js
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy-github-pages.yml  publish_example.yml  test-ui.yml
.storybook/: actions.mock.ts  api.mock.ts  main.ts  manager-head.html  manager.js  preview.ts  preview.tsx  stories.mock.ts
OdinReact/: package-lock.json  package.json  vite.config.ts
OdinReact/lib/: main.ts
OdinReact/src/: App.css  App.tsx  EndpointPage.tsx  LogMessagePage.tsx  index.css
control/: pyproject.toml
control/src/react/: __init__.py  adapter.py  controller.py  event_logger.py  react_adapter.py
control/test/config/: react_example.cfg
docs/: AdapterEndpoint.md  Compiling.mdx  Endpoint.mdx  FAQ.mdx  Getting Started.mdx  Introduction.mdx  OdinApp.md  ScopeCanvas.md  Styling.mdx  TitleCard.md  demoPage.stories.tsx  demoPage.tsx  storydocs.css  withEndpoint.md
example/: .env.production  README.md  package-lock.json  package.json
example/src/: App.js  ControlCard.js  CryoPage.jsx  EndpointExample.jsx  GraphExample.jsx  (+4 more)
lib/: main.ts
odin-react/: package-lock.json
src/: App.js  App.tsx  AutoGeneratedPage.tsx  EndpointPage.tsx  GraphPage.tsx  LiveViewPage.tsx  LogMessagePage.tsx  MainPage.tsx  PeriodicEndpointPage.tsx  index.css  index.js  main.tsx  odin_control.js  styles.module.css
(+113 files in other folders)
